[package]
name = "url-shortener-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
axum = "0.6.18"
hyper = "0.14.27"
serde_json = { version = "1.0.107" }
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
